--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -43,7 +43,7 @@ about:
   home: https://github.com/lmcinnes/pynndescent
   license: BSD-2-Clause
   license_family: BSD
-  license_file: {{ environ["RECIPE_DIR"] }}/LICENSE
+  license_file: LICENSE
   summary: Simple fast approximate nearest neighbor search
   description: |
     A Python nearest neighbor descent for approximate nearest neighbors. 
