--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "pynndescent" %}
-{% set version = "0.5.10" %}
+{% set version = "0.5.13" %}
 
 package:
   name: {{ name|lower }}
@@ -7,12 +7,10 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: 5d5dc683c03ef55fe3ddf693859720ca18f85c6e6e5bb0b4f14870278d5288ad
+  sha256: d74254c0ee0a1eeec84597d5fe89fedcf778593eeabe32c2f97412934a9800fb
 
 build:
   number: 0
-  # numba and llvmlite aren't available on s390x
-  skip: true  # [py<37 or s390x]
   script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
 
 requirements:
@@ -25,19 +23,30 @@ requirements:
     - python
     - importlib-metadata >=4.8.1  # [py<38]
     - joblib >=0.11
-    - llvmlite >=0.34
+    - llvmlite >=0.30
     - numba >=0.51.2
     - numpy >=1.17
     - scikit-learn >=0.18
     - scipy >=1.0
 
 test:
+  source_files:
+    - pynndescent/tests
   imports:
     - pynndescent
-  requires:
-    - pip
+    - pynndescent.distances
+    - pynndescent.optimal_transport
+    - pynndescent.rp_trees
+    - pynndescent.sparse
+    - pynndescent.sparse_nndescent
+    - pynndescent.utils
   commands:
     - pip check
+    # pyargs does not work, tests folder not in the site-packages dir.
+    - pytest -v pynndescent/tests
+  requires:
+    - pip
+    - pytest
 
 about:
   home: https://github.com/lmcinnes/pynndescent
